<resources>
    <string name="app_name">ArtHelper</string>
    <string name="btn_1">Боевой порядок</string>
    <string name="btn_2">Условия стрельбы</string>
    <string name="btn_3">Огневая задача</string>
    <string name="btn_sc_compose">Составить</string>
    <string name="btn_sc_fill">Заполнить</string>
    <string name="btn_sc_download">Загрузить</string>

    <string name="tab1_comord">Средства поражения</string>
    <string name="tab2_comord"> Координаты КНП и ОП</string>
    <string name="tab1_system">Система</string>
    <string name="tab1_packet">Снаряд</string>
    <string name="tab1_charge">Заряд</string>
    <string name="tab1_fuse">Взрыватель</string>
    <string name="tab1_range">Дальности:</string>
    <string name="tab1_max">Максимальная:</string>
    <string name="tab1_ricoshet">Рикошетная:</string>
    <string name="tab1_mort">Мортирная:</string>

    <string-array name="system_array">
        <item>2Б11</item>
    </string-array>
    <string-array name="packet_array">
        <item>ОФ45</item>
    </string-array>
    <string-array name="charge_array">
        <item>Полный</item>
        <item>Уменьшенный</item>
        <item>Первый</item>
        <item>Второй</item>
    </string-array>
    <string-array name="fuse_array">
        <item>РГМ2</item>
    </string-array>

    <string name="tab1_shootcond">Наземные метеоусловия</string>
    <string name="tab2_shootcond">Баллистические условия</string>
    <string name="tab3_shootcond">Определение координат цели</string>
    <string name="tab4_shootcond">Поправки</string>
    <string name="tab1_press">Давление:</string>
    <string name="tab1_temper">Температура:</string>
    <string name="tab1_direction">Направление ветра:</string>
    <string-array name="wind_speed_array">
        <item>Скорость ветра:</item>
        <item>Дальность сноса пуль:</item>
    </string-array>
    <string name="tab1_height_meteo">Высота метеопоста:</string>

    <string name="tab2_temper_charge">Температура заряда:</string>
    <string name="tab2_vo_sum">Vo сум:</string>
    <string name="tab3_dk">Дк:</string>
    <string name="tab3_ac">Aц:</string>
    <string name="btn_pgz">ПГЗ</string>

    <string name="tab4_opor">Опорн.</string>
    <string name="tab4_range">Дальность</string>
    <string name="tab4_direction">Напр-ние</string>
    <string name="tab4_in_direction">В направлении:</string>
    <string name="btn_calculate">Расчитать</string>
    <string name="tab4_meteo_sr">Метеосредний</string>
    <string name="tab4_ddchm">ддччм</string>
    <string name="tab4_h_dmk">выс ДМК</string>
    <string name="tab4_press">давл</string>
    <string name="tab4_temper">темп</string>
    <string name="btn_back">Назад</string>

</resources>
