<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.arteme.myapplication.MainActivity">

    <Button
        android:id="@+id/btnComOrd"
        android:onClick="sendComOrd"
        android:layout_width="@dimen/main_btn_width"
        android:layout_height="@dimen/main_btn_height"
        android:layout_gravity="center"
        android:text="@string/btn_1"
        android:textColor="@color/textButton"
        android:background="@color/colorPrimary"/>

    <Button
        android:id="@+id/btnShootCond"
        android:onClick="sendShootCond"
        android:layout_width="@dimen/main_btn_width"
        android:layout_height="@dimen/main_btn_height"
        android:layout_gravity="center"
        android:text="@string/btn_2"
        android:textColor="@color/textButton"
        android:background="@color/colorPrimary"
        android:layout_marginTop="@dimen/main_bettwen_btn"
        android:layout_below="@+id/btnComOrd" />

    <Button
        android:id="@+id/btnFireTask"
        android:layout_width="@dimen/main_btn_width"
        android:layout_height="@dimen/main_btn_height"
        android:layout_gravity="center"
        android:text="@string/btn_3"
        android:textColor="@color/textButton"
        android:background="@color/colorPrimary"
        android:layout_marginTop="@dimen/main_bettwen_btn"
        android:layout_below="@+id/btnShootCond" />


</RelativeLayout>
