<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/headerTab1ShootCond"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textColor="@color/colorTextHeader"
        android:text="@string/tab1_shootcond"
        android:layout_gravity="center"
        android:layout_marginTop="110dp"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/text_tab_size"
            android:layout_gravity="left"
            android:text="@string/tab1_press"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/textBlack"
            android:orientation="vertical"
            android:layout_weight="2">
            <EditText
                android:id="@+id/editPress"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/textButton"
                android:gravity="center"
                android:inputType="number"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/text_tab_size"
            android:layout_gravity="left"
            android:text="@string/tab1_temper"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/textBlack"
            android:orientation="vertical"
            android:layout_weight="2">
            <EditText
                android:id="@+id/editTemper"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/textButton"
                android:gravity="center"
                android:inputType="number"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/text_tab_size"
            android:layout_gravity="left"
            android:text="@string/tab1_direction"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/textBlack"
            android:orientation="vertical"
            android:layout_weight="2">
            <EditText
                android:id="@+id/editDirection"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/textButton"
                android:gravity="center"
                android:inputType="number"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <Spinner
            android:id="@+id/windSpeedSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/textBlack"
            android:orientation="vertical"
            android:layout_weight="2">
            <EditText
                android:id="@+id/editWindSpeed"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/textButton"
                android:gravity="center"
                android:inputType="number"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/text_tab_size"
            android:layout_gravity="left"
            android:text="@string/tab1_height_meteo"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/textBlack"
            android:orientation="vertical"
            android:layout_weight="2">
            <EditText
                android:id="@+id/editHeightMeteo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/textButton"
                android:gravity="center"
                android:inputType="number"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <Button
            android:id="@+id/btnSССompose"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/btn_sc_compose"
            android:textColor="@color/textButton"
            android:background="@color/colorPrimary"
            android:layout_marginRight="10dp" />
        <Button
            android:id="@+id/btnSСFill"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/btn_sc_fill"
            android:textColor="@color/textButton"
            android:background="@color/colorPrimary"
            android:layout_marginLeft="10dp" />
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <Button
            android:id="@+id/btnSСDownload"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/btn_sc_download"
            android:textColor="@color/textButton"
            android:background="@color/colorPrimary" />
        </LinearLayout>

</LinearLayout>