<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/headerTab1ShootCond"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textColor="@color/colorTextHeader"
        android:text="@string/tab3_shootcond"
        android:layout_gravity="center"
        android:layout_marginTop="110dp"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:background="@color/textBlack"
            android:orientation="horizontal">
            <TextView
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_marginRight="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:background="@color/colorHeaderTab" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="X"
                android:gravity="center"
                android:textSize="20dp"
                android:textColor="@color/textBlack"
                android:layout_marginRight="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:background="@color/colorHeaderTab"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Y"
                android:gravity="center"
                android:textSize="20dp"
                android:textColor="@color/textBlack"
                android:layout_marginRight="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:background="@color/colorHeaderTab"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="h"
                android:gravity="center"
                android:textSize="20dp"
                android:textColor="@color/textBlack"
                android:layout_marginRight="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:background="@color/colorHeaderTab"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:background="@color/textBlack"
            android:orientation="horizontal">
            <TextView
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:text="1"
                android:gravity="center"
                android:textSize="20dp"
                android:textColor="@color/textBlack"
                android:layout_marginRight="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginBottom="2dp"
                android:background="@color/colorHeaderTab" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="18dp"
                android:inputType="number"
                android:textColor="@color/textBlack"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="2dp"
                android:background="@color/textButton"
                android:layout_weight="1"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="20dp"
                android:inputType="number"
                android:textColor="@color/textBlack"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="2dp"
                android:background="@color/textButton"
                android:layout_weight="1"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="20dp"
                android:inputType="number"
                android:textColor="@color/textBlack"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="2dp"
                android:background="@color/textButton"
                android:layout_weight="1"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/text_tab_size"
            android:gravity="center"
            android:text="@string/tab3_dk"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/textBlack"
            android:orientation="vertical"
            android:layout_weight="1">
            <EditText
                android:id="@+id/editDk"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/textButton"
                android:gravity="center"
                android:inputType="number"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp" />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/text_tab_size"
            android:gravity="center"
            android:text="@string/tab3_ac"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/textBlack"
            android:orientation="horizontal"
            android:layout_weight="1">
            <EditText
                android:id="@+id/editAc1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/textButton"
                android:gravity="center"
                android:inputType="number"
                android:layout_weight="1"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp" />
            <TextView
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:textSize="@dimen/text_tab_size"
                android:background="@color/textButton"
                android:gravity="center"
                android:text="-"/>
            <EditText
                android:id="@+id/editAc2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/textButton"
                android:gravity="center"
                android:inputType="number"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <Button
            android:id="@+id/btnSСPGZ"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/btn_pgz"
            android:textColor="@color/textButton"
            android:background="@color/colorPrimary" />
    </LinearLayout>

</LinearLayout>